# worldofpain

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  configure.sh  run.sh
resources/scripts/: scmanager.lua  test.lua
resources/shaders/: basic.glsl  color.glsl  mesh.glsl
src/core/: app.cpp  app.hpp  clock.hpp  event.hpp  log.cpp  log.hpp  lua.cpp  lua.hpp  luascene.hpp  main.cpp  scene.cpp  scene.hpp  stdafx.hpp  window.cpp  window.hpp
src/physics/: transform.hpp
src/render/: camera.hpp  colormesh.cpp  colormesh.hpp  mesh.cpp  mesh.hpp  node.cpp  node.hpp  shader.cpp  shader.hpp  strip.cpp  strip.hpp  texture.cpp  texture.hpp  transform.hpp  vertex.cpp  vertex.hpp
